crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__inheritance__inherit_from_nil.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/inheritance/inherit_from_nil.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: only classes can be inherited from, but `nil` is of type `Nil`
   ╭─[craftinginterpreters/test/inheritance/inherit_from_nil.lox:2:13]
   │
 2 │ class Foo < Nil {} // expect runtime error: Superclass must be a class.
   │             ───  
───╯
